@@ -1,5 +1,11 @@
 2012-12-28 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/ralloc2.cc,
+	  src/stm8/gen.c:
+	  Infrastructure for STM8 port.
+
+2012-12-28 Philipp Klaus Krause <pkk AT spth.de>
+
 	* support/regression/tests/gcc-torture-execute-20011126-1.c,
 	  support/regression/tests/gcc-torture-execute-20000717-2.c,
 	  support/regression/tests/gcc-torture-execute-921202-2.c,
